--- a/www/styles/footer.css
+++ b/www/styles/footer.css
@@ -13,31 +13,61 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 8px;
 }
 
 .footer-link {
-  /*color: inherit;*/
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  border: none;
 }
 
 .footer-link:hover {
   text-decoration: underline;
 }
 
-.footer-divider {
-  color: #FFFFFF;
+.logo-link .header-logo {
+  height: 50px;
+  border: none;
 }
 
+/*---------------------------------------------------------------------------*/
+/* Use consistent margins for spacing */
+/*---------------------------------------------------------------------------*/
+.logo-link:first-child {
+  margin-right: 40px; 
+}
+
+.teal-logo {
+  transform: scale(3);
+  border: none;
+}
+
+.footer-divider {
+  color: #FFFFFF;
+  height: auto;
+  border: none;
+  margin-left: 15px; 
+}
+/*---------------------------------------------------------------------------*/
 /* Media queries for small screens */
+/*---------------------------------------------------------------------------*/
 @media screen and (max-width: 480px) {
   .custom-footer {
     padding: 8px;
     font-size: 12px;
   }
-
+  
   .footer-content {
     flex-direction: column;
-    gap: 4px;
+    gap: 15px;
+  }
+  
+  .logo-link:first-child {
+    margin-right: 0;
+  }
+  
+  .footer-divider {
+    margin-left: 0;
   }
 }
